# vkSpectralPathtracer

./: .gitignore  CMakeLists.txt
shaders/: bufferPresent.comp.glsl  common.h  forceUpdate.comp.glsl  pointSprite.frag.glsl  pointSprite.vert.glsl  pointSpriteShading.comp.glsl  pointUpdate.comp.glsl  random.h  raytrace.comp.glsl
shared/: CMakeLists.txt  camera.cpp  camera.h  vk_descriptors.cpp  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_types.h
src/: CMakeLists.txt  Prometheus.cpp  Prometheus.h  engine.cpp  engine.h  presets.yaml
